DEC-5: Add country field and adjust behat

--- a/translations/messages.en.yml
+++ b/translations/messages.en.yml
@@ -14,3 +14,4 @@ bitbag_sylius_dhl_plugin:
     postal_code: Postal code
     email: E-mail
     phone_number: Phone number
+    country_code: Country
