--- a/translations/messages.en.yml
+++ b/translations/messages.en.yml
@@ -15,4 +15,5 @@ bitbag_sylius_dhl_plugin:
     email: E-mail
     phone_number: Phone number
     country_code: Country
-    shipment_data_has_been_exported: Shipment data has been exported
+  form:
+    not_blank: This field cannot be blank
